refactor: Member Entity 경로 오류 수정, LikeResponseDto 삭제로 인한 반환값 수정 #18